--- a/foodForThought/recipe/templates/recipe/home.html
+++ b/foodForThought/recipe/templates/recipe/home.html
@@ -25,12 +25,6 @@
                     Recipes
                 </a>
             </li>
-            <li class="">
-                <a href="{% url 'recipe:home'%}">
-                    <span class="glyphicon glyphicon-home"></span>&nbsp;
-                    Home
-                </a>
-            </li>
         </ul>
         <form class="navbar-form navbar-left" role="search" method="get" action="{% url 'recipe:index' %}">
             <div class="form-group">
@@ -39,12 +33,6 @@
             <button type="submit" class=btn btn-default">Search</button>
         </form>
         <ul class = "nav navbar-nav navbar-right">
-            <li class="">
-                <a href="{% url 'recipe:index' %}">
-                    <span class="glyphicon glyphicon-user"></span>&nbsp;
-                    Welcome, {{user}}
-                </a>
-            </li>
             <li class="">
                 <a href="{% url 'recipe:recipe-add'%}">
                     <span class="glyphicon glyphicon-plus"></span>&nbsp;
@@ -63,23 +51,51 @@
 </nav>
 
 <body style='background-color: white;'>
-<h1><center>All My Recipes On Record</center></h1>
+<h1><center>My Recipe Feed</center></h1>
 <ul>
-    {% for recipe in all_recipes %}
-    <div class = "col-sm-4 col-lg-2">
-        <div class = "thumbnail">
-         <img src = "{{recipe.RecipePicture.url}}"/>
-    <h2>{{recipe.Name}}</h2>
-     <a href="/recipe/{{ recipe.id }}" class="btn btn-primary btn-sm" role="button">View Details</a>
-     <form action="{% url 'recipe:recipe-delete' recipe.id %}" method="post" style= "display: inline;">
-     {% csrf_token %}
-     <input type="hidden" name="recipe_id" value="{{recipe.id}}"/>
-     <button type="submit" clas="btn btn-default btn-sm">
-         <span class="glyphicon glyphicon-trash"></span>&nbsp;
-     </button>
-     </form>
-     </div>
-     </div>
-    {% endfor %}
+<div class="container">
+    <div class="col-md-8">
+        <h2>Home</h2>
+        <h1>Create A New Recipe</h1>
+        <form class="form-horizontal" action="" method="post" enctype="multipart/form-data" style='height:300px>
+            {% csrf_token %}
+            {% include 'recipe/form-template.html'%}
+            <div class = "form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                 <button type="submit" class="btn btn-success">Submit</button>
+                </div>
+            </div>
+        </form>
+        <h2>{{ text }}</h2>
+        {% for post in posts %}
+            <h3>{{ post.post}}</h3>
+            <h4>{{ post.Name }}</h4>
+            <h5>{{ post.created }}</h5>
+            <h6> Posted by: {{post.user.username}}</h6>
+            <div max-width="20%" max-height="20%">
+            <img src = "{{post.RecipePicture.url}}"/>
+            </div>
+            <br>
+        {% endfor %}
+    </div>
+    <div class="col-md-4">
+        <h2>Other People</h2>
+        {% for user in users %}
+            <h6>{{ user.username }}</h6>
+            {% if not user in friends %}
+            <a href="{% url 'recipe:change_friends' operation='add' pk=user.pk %}">
+            <button type="button" class="btn btn-success btn-sm">Add Friend</button>
+            </a>
+            {% endif %}
+        {% endfor %}
+        <h2>Friends</h2>
+        {% for friend in friends %}
+                <h6>{{ friend.username }}</h6>
+            <a href="{% url 'recipe:change_friends' operation='remove' pk=friend.pk %}">
+            <button type="button" class="btn btn-primary btn-sm" >Remove Friend</button>
+            </a>
+        {% endfor %}
+    </div>
+</div>
 </ul>
 </body>
