--- a/foodForThought/recipe/templates/recipe/registration_form.html
+++ b/foodForThought/recipe/templates/recipe/registration_form.html
@@ -56,8 +56,8 @@
         <div class = "col-sm-12 col-md-7">
             <div class ="panel panel-default">
                 <div class="panel-body">
-                    <h1>Create A New Recipe</h1>
-                    <form class="form-horizontal" action="" method="post" enctype="multipart/form-data" style='height:500px'>
+                    <h1>Create A New Account</h1>
+                    <form class="form-horizontal" action="" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         {% include 'recipe/form-template.html'%}
                         <div class = "form-group">
