--- a/foodForThought/recipe/templates/recipe/add_comment.html
+++ b/foodForThought/recipe/templates/recipe/add_comment.html
@@ -25,10 +25,17 @@
                     Recipes
                 </a>
             </li>
+            <li class="">
+                <a href="{% url 'recipe:home'%}">
+                    <span class="glyphicon glyphicon-home"></span>&nbsp;
+                    Home
+                </a>
+            </li>
         </ul>
         <form class="navbar-form navbar-left" role="search" method="get" action="{% url 'recipe:index' %}">
             <div class="form-group">
                 <input type="text" class="form-control" name="q" value="{{ request.GET.q }}">
+                {% csrf_token %}
             </div>
             <button type="submit" class=btn btn-default">Search</button>
         </form>
@@ -63,60 +70,15 @@
 </nav>
 
 <body style='background-color: white;'>
-<h1><center>My Recipe Feed</center></h1>
-<ul>
-<div class="container">
-    <div class="col-md-8">
-        <h2>Home</h2>
-        <h3> What's Cooking in Your Kitchen? </h3><br>
-        <form class="form-horizontal" action="" method="post" enctype="multipart/form-data" style='height:500px'>
-        {% csrf_token %}
-        {% include 'recipe/form-template.html'%}
-        <div class = "form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-success">Submit</button>
-            </div>
-        </div>        
-
-        {% for post in posts %}
-            <h3>{{ post.post}}</h3>
-            <h4>{{ post.Name }}</h4>
-            <h5>{{ post.created }}</h5>
-            <h6> Posted by: {{post.user.username}}</h6>
-            <img src = "{{post.RecipePicture.url}}" width=50%, height=60%/>
-            <hr>
-            <a href ="{% url 'recipe:add_comment' pk=post.pk%}"> Leave a comment</a>
-            {% for comments in post.comments.all %}
-                <p> Created: {{ comments.created }}</p>
-                <p> Comment: {{ comments.body }}</p>
-                <p> Commented By: {{ comments.user.username}}</p>
-
-            {%endfor%}
-            
-            <br>
-        {% endfor %}
+<h1><center>Add A New Comment</center></h1>
+<div class = "container-fluid">
+<form method = 'POST'>{% csrf_token %}
+    {% include 'recipe/form-template.html'%}
+    <div class = "form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+    <button type="submit" class="btn btn-success">Submit</button>
     </div>
-    <div class="col-md-4">
-        <h2>Other People</h2>
-        {% for user in users %}
-            <h6>{{ user.username }}</h6>
-            {% if not user in friends %}
-            <a href="{% url 'recipe:change_friends' operation='add' pk=user.pk %}">
-            <button type="button" class="btn btn-success btn-sm">Add Friend</button>
-            </a>
-            {% endif %}
-        {% endfor %}
-        <h2>Friends</h2>
-        {% for friend in friends %}
-                <h6>{{ friend.username }}</h6>
-            <a href="{% url 'recipe:change_friends' operation='remove' pk=friend.pk %}">
-            <button type="button" class="btn btn-primary btn-sm" >Remove Friend</button>
-            </a>
-            <a href="/recipe/{{friend.username}}/">
-            <button type="button" class="btn btn-success btn-sm">View Profile</button>
-            </a>
-        {% endfor %}
     </div>
+</form>
 </div>
-</ul>
 </body>
