--- a/foodForThought/recipe/templates/recipe/index.html
+++ b/foodForThought/recipe/templates/recipe/index.html
@@ -35,6 +35,7 @@
         <form class="navbar-form navbar-left" role="search" method="get" action="{% url 'recipe:index' %}">
             <div class="form-group">
                 <input type="text" class="form-control" name="q" value="{{ request.GET.q }}">
+                {% csrf_token %}
             </div>
             <button type="submit" class=btn btn-default">Search</button>
         </form>
@@ -43,6 +44,12 @@
                 <a href="{% url 'recipe:index' %}">
                     <span class="glyphicon glyphicon-user"></span>&nbsp;
                     Welcome, {{user}}
+                </a>
+            </li>
+            <li class="">
+                <a href="{% url 'recipe:index' %}">
+                    <span class="glyphicon glyphicon-search"></span>&nbsp;
+                    Search Recipes
                 </a>
             </li>
             <li class="">
@@ -77,6 +84,15 @@
      <button type="submit" clas="btn btn-default btn-sm">
          <span class="glyphicon glyphicon-trash"></span>&nbsp;
      </button>
+
+     </form>
+    <form action="{% url 'recipe:recipe-update' recipe.id %}" method="post" style= "display: inline;">
+     {% csrf_token %}
+     <input type="hidden" name="recipe_id" value="{{recipe.id}}"/>
+     <button type="submit" clas="btn btn-default btn-sm">
+         <span class="glyphicon glyphicon-pencil"></span>&nbsp;
+     </button>
+     
      </form>
      </div>
      </div>
