--- a/foodForThought/recipe/templates/recipe/login.html
+++ b/foodForThought/recipe/templates/recipe/login.html
@@ -33,10 +33,10 @@
             <button type="submit" class=btn btn-default">Search</button>
         </form>
         <ul class = "nav navbar-nav navbar-right">
-            <li clas="">
-                <a href="">
-                    <span class="glyphicon glyphicon-plus"></span>&nbsp;
-                    Add Recipe
+            <li class="">
+                <a href="{% url 'recipe:index' %}">
+                    <span class="glyphicon glyphicon-search"></span>&nbsp;
+                    Search Recipes
                 </a>
             </li>
             <li class="">
