--- a/foodForThought/recipe/templates/recipe/index.html
+++ b/foodForThought/recipe/templates/recipe/index.html
@@ -47,7 +47,7 @@
                 </a>
             </li>
             <li class="">
-                <a href="{% url 'recipe:index' %}">
+                <a href="{% url 'recipe:search' %}">
                     <span class="glyphicon glyphicon-search"></span>&nbsp;
                     Search Recipes
                 </a>
