--- a/foodForThought/recipe/templates/recipe/login.html
+++ b/foodForThought/recipe/templates/recipe/login.html
@@ -34,7 +34,7 @@
         </form>
         <ul class = "nav navbar-nav navbar-right">
             <li class="">
-                <a href="{% url 'recipe:index' %}">
+                <a href="{% url 'recipe:search' %}">
                     <span class="glyphicon glyphicon-search"></span>&nbsp;
                     Search Recipes
                 </a>
